# manga-translator

./: .eslintrc.json  .gitignore  Dockerfile  LICENCE  LICENSE  README.md  c.py  collector_utils.js  convert.py  data.yaml  ex.py  extractor.py  font.py  generate_reqs.txtt  latest_seg_annotations.json  live.py  live_seg.py  main.py  main_cd.py  out.py  package-lock.json  package.json  pipelines.py  pyproject.toml  requirements.txt  seg.yaml  seg_annotations.json  server.py  simple-server.py  t.py  test.py  tile_search.py  train.py  train_cd.py  train_color_detect.py  train_detect.yaml  train_seg.yaml  trans.py  translators.py  usage  (+1 more)
app/: asgi.py  settings.py  urls.py  views.py
cli/: .gitignore  README.md  example_config.yaml  main.py  pyproject.toml
datasets/custom/train/: labels.cache  labels.txt
datasets/custom/train/labels/: ja_oshi_no_ko_1_0.txt  ja_oshi_no_ko_1_003.txt  ja_oshi_no_ko_1_006.txt  ja_oshi_no_ko_1_009.txt  ja_oshi_no_ko_1_010.txt  ja_oshi_no_ko_1_011.txt  ja_oshi_no_ko_1_012.txt  ja_oshi_no_ko_1_013.txt  ja_oshi_no_ko_1_022.txt  ja_oshi_no_ko_1_023.txt  ja_oshi_no_ko_1_024.txt  ja_oshi_no_ko_1_029.txt  ja_oshi_no_ko_1_031.txt  ja_oshi_no_ko_1_036.txt  ja_oshi_no_ko_1_1.txt  ja_oshi_no_ko_1_14.txt  ja_oshi_no_ko_1_15.txt  ja_oshi_no_ko_1_17.txt  ja_oshi_no_ko_1_18.txt  ja_oshi_no_ko_1_19.txt  ja_oshi_no_ko_1_20.txt  ja_oshi_no_ko_1_21.txt  ja_oshi_no_ko_1_25.txt  ja_oshi_no_ko_1_26.txt  ja_oshi_no_ko_1_27.txt  ja_oshi_no_ko_1_28.txt  ja_oshi_no_ko_1_30.txt  ja_oshi_no_ko_1_32.txt  ja_oshi_no_ko_1_33.txt  ja_oshi_no_ko_1_34.txt  ja_oshi_no_ko_1_35.txt  ja_oshi_no_ko_1_37.txt  ja_oshi_no_ko_1_38.txt  ja_oshi_no_ko_1_39.txt  ja_oshi_no_ko_1_4.txt  ja_oshi_no_ko_1_40.txt  ja_oshi_no_ko_1_5.txt  ja_oshi_no_ko_1_7.txt  ja_oshi_no_ko_1_8.txt
datasets/custom/val/: labels.cache
datasets/custom/val/labels/: ja_oshi_no_ko_1_2.txt
datasets/seg/train/: labels.cache
datasets/seg/train/labels/: ja_oshi_no_ko_1_0.txt  ja_oshi_no_ko_1_1.txt  ja_oshi_no_ko_1_10.txt  ja_oshi_no_ko_1_11.txt  ja_oshi_no_ko_1_12.txt  ja_oshi_no_ko_1_13.txt  ja_oshi_no_ko_1_14.txt  ja_oshi_no_ko_1_15.txt  ja_oshi_no_ko_1_18.txt  ja_oshi_no_ko_1_19.txt  ja_oshi_no_ko_1_20.txt  ja_oshi_no_ko_1_21.txt  ja_oshi_no_ko_1_22.txt  ja_oshi_no_ko_1_23.txt  ja_oshi_no_ko_1_24.txt  ja_oshi_no_ko_1_25.txt  ja_oshi_no_ko_1_26.txt  ja_oshi_no_ko_1_27.txt  ja_oshi_no_ko_1_28.txt  ja_oshi_no_ko_1_29.txt  ja_oshi_no_ko_1_3.txt  ja_oshi_no_ko_1_30.txt  ja_oshi_no_ko_1_31.txt  ja_oshi_no_ko_1_32.txt  (+12 more)
datasets/seg/val/: labels.cache
experiments/: renaming_dataset.py  test.py
extension/: README.md
extension/backend/: .gitignore  Dockerfile  README.md  example_config.yaml  main.py  pyproject.toml
extension/frontend/: README.md  package-lock.json  package.json  popup.html  tsconfig.app.json  tsconfig.node.json  vite.config.ts
extension/frontend/configs/: content.vite.config.ts  page.vite.config.ts  popup.vite.config.ts  worker.vite.config.ts
extension/frontend/public/: manifest.json  page_styles.css
extension/frontend/src/: page.ts
extractor_test/: a.py  c.py  d.py
models/: detection.pt  segmentation.pt
mt/: ocr.py  pipelines.py  translators.py
scripts/: collector_utils.js  robo_to_yolo.py  train.py
src/: App.tsx  types.ts
src/components/: ArgsTileColumn.tsx  ImageConverter.tsx  ImageSettings.tsx  SelectTileRow.tsx  TileRow.tsx
src/redux/: hooks.ts  index.ts
src/redux/slices/: app.ts
training/: .gitignore  README.md  color_detect.py  main.py  pyproject.toml  train_yolo_detect.py  train_yolo_seg.py
training/color_detection/: constants.py  dataset.py  draw_text.py  main.py  main_old.py  model.py  pyproject.toml  sample.html  sample_generator.py  train.py  utils.py
training/detection/: main.py
translator/: .gitignore  README.md  ocr.py  pipelines.py  plugin.py  pyproject.toml  translators.py  utils.py
translator/cleaners/: deepfillv2.py  deepfillv2_impl.py  get.py  lama.py
translator/color_detect/: constants.py  datasets.py  model.py  models.py  train.py  utils.py
translator/color_detect/training/: constants.py  dataset.py  train.py  utils.py
translator/core/: cleaners.py  constants.py  drawers.py  ocr.py  pipelines.py  plugin.py  train.py  translators.py
translator/drawers/: get.py  horizontal.py  vertical.py
translator/inpainting/: __init__.py
translator/inpainting/trained/: states_pt_places2.pth
translator/ocr/: clean.py  easy_ocr.py  get.py  huggingface_ja.py  manga.py  no.py  tessaract_ocr.py
translator/pipelines/: cbz.py  image_to_image.py  pipeline.py
translator/src/: main.py
translator/src/manga_translator/: get.py  utils.py
translator/src/manga_translator/cleaning/: all_white_cleaner.py  deepfillv2.py  get.py  lama.py  opencv.py
translator/src/manga_translator/color_detection/: get.py  openai.py
translator/src/manga_translator/core/: constants.py  plugin.py  typing.py
translator/src/manga_translator/detection/: get.py  yolo.py
translator/src/manga_translator/drawing/: get.py  horizontal.py
translator/src/manga_translator/ocr/: debug.py  get.py  huggingface.py  manga_ocr.py  openai.py
translator/src/manga_translator/pipelines/: cbz.py  image_to_image.py
translator/src/manga_translator/segmentation/: get.py  yolo.py
translator/src/manga_translator/translation/: debug.py  deepl.py  get.py  huggingface.py  openai.py  pipe.py
translator/translators/: debug.py  deepl.py  gemini.py  get.py  google.py  hugging_face.py  openai.py
ui/: README.md  main.py  package-lock.json  package.json  pyproject.toml
ui/frontend/: .gitignore  .prettierignore  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
ui/frontend/src/: App.tsx  index.css  types.ts  useAppStore.ts  utils.ts
ui/frontend/src/components/: ArgsTileColumn.tsx  Grouped.tsx  ImageConverter.tsx  ImageSettings.tsx  PluginSelect.tsx  TileRow.tsx
ui/public/: index.html
ui/src/: App.tsx  index.css  index.tsx  types.ts
ui/src/components/: ArgsTileColumn.tsx  ImageConverter.tsx  ImageSettings.tsx  TileRow.tsx
ui/src/redux/slices/: app.ts
(+21 files in other folders)
