[tool.poetry]
name = "manga-translator"
version = "0.1.0"
description = ""
authors = ["Tare Ebelo <75279482+TareHimself@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
ultralytics = "^8.0.118"
pillow = "^9.5.0"
pyhyphen = "^4.0.3"
google-cloud-translate = "^3.11.1"
mss = "^9.0.1"
manga-ocr = "^0.1.10"
largestinteriorrectangle = "^0.2.0"
sentencepiece = "^0.1.99"
django = "^4.2.3"
flask = "^2.3.2"
tornado = "^6.3.2"

[tool.poetry.dev-dependencies]
poethepoet = "^0.20.0"

[tool.poe.tasks]
uninstall-torch = "pip uninstall -y torch torchvision torchaudio"
install-torch-cuda = "pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu117"
build-ui = "npm install && npm run build"
run-server = "python server.py"
force-cuda = ["uninstall-torch","install-torch-cuda"]
# install-torch-linux = "pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu118"
# install-torch-osx ="pip install torch torchvision torchaudio"
# torch-win = ["uninstall-torch","install-torch-win"]
# torch-linux = ["uninstall-torch","install-torch-linux"]
# torch-osx =["uninstall-torch","install-torch-osx"]



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
