[tool.poetry]
name = "manga-translator"
version = "0.1.0"
description = ""
authors = ["Tare Ebelo <75279482+TareHimself@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"

aiohttp = "^3.9.0"
transformers = "^4.35.2"
python-dotenv = "^1.0.0"
timm = "^0.9.12"
tornado = "^6.3.3"
tqdm = "^4.66.1"
sentencepiece = "^0.1.99"
pycountry = "^22.3.5"
numpy = "^1.26.2"
jaconv = "^0.3.4"
faker = "^20.1.0"
easyocr = "^1.7.1"
pyhyphen = "^4.0.3"
pysimplegui = "^4.60.5"
largestinteriorrectangle = "^0.2.0"
ultralytics = "^8.0.218"
fugashi = "^1.3.0"
sacremoses = "^0.1.1"
unidic-lite = "^1.0.8"
simple-lama-inpainting = "^0.1.2"
opencv-python-headless = "^4.8.1.78"
openai = "^1.6.0"
vit-pytorch = "^1.6.5"
poethepoet = "^0.20.0"

[tool.poe.tasks]
uninstall-torch = "python -m pip uninstall -y torch torchvision"
install-torch-cuda = "python -m pip install torch==2.0.0 torchvision --index-url https://download.pytorch.org/whl/cu117"
build-ui = "npm install && npm run build"
run-server = "python server.py"
force-cuda = ["uninstall-torch","install-torch-cuda"]
build-docker = "docker build -f Dockerfile . -t tarehimself/manga-translator"
run-docker = "docker run --gpus all -p 5000:5000 tarehimself/manga-translator"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
