[project]
name = "cli"
version = "0.1.0"
description = "Cli tool for manga translator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "manga_translator",
  "pyyaml>=6.0.3",
]



[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
manga_translator = { path = "../translator", editable = true }

