[project]
name = "manga_translator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "deepl>=1.25.0",
    "einops>=0.8.1",
    "fugashi>=1.5.2",
    "hf-xet>=1.2.0",
    "jaconv>=0.4.1",
    "largestinteriorrectangle>=0.2.1",
    "numba==0.63.1",
    "numpy>=2.3.5",
    "openai==2.14.0",
    "opencv-python-headless>=4.11.0.86",
    "pillow>=12.0.0",
    "protobuf>=6.33.1",
    "pycountry>=24.6.1",
    "pydantic>=2.12.5",
    "pyphen>=0.17.2",
    "pyyaml>=6.0.3",
    "sacremoses>=0.1.1",
    "sentencepiece>=0.2.1",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "transformers>=4.57.3",
    "ultralytics>=8.3.233",
    "unidic-lite>=1.0.8",
]


[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
