[project]
name = "ui"
version = "1.0.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "manga_translator",
    "python-dotenv>=1.2.1",
    "tornado>=6.5.2",
]


[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
manga_translator = { path = "../translator", editable = true }

