[project]
name = "ui"
version = "1.0.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "blacksheep>=2.4.5",
    "granian>=2.6.0",
    "manga_translator",
    "poethepoet>=0.39.0",
    "python-dotenv>=1.2.1",
    "tornado>=6.5.2",
    "uvicorn>=0.40.0",
]


[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
manga_translator = { path = "../translator", editable = true }

[tool.poe.tasks.prod]
help = "run the server using granian"
cmd  = "granian --interface asgi main:app --port 9000"

[tool.poe.tasks.dev]
help = "run the server using uvicorn"
cmd  = "uvicorn main:app --reload --port 9000"

