[project]
name = "extension-backend"
version = "1.0.0"
description = "Backend for the extension example"
requires-python = ">=3.12"
dependencies = [
    "blacksheep>=2.4.5",
    "manga_translator",
    "poethepoet>=0.39.0",
    "uvicorn>=0.40.0",
]


[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
manga_translator = { path = "../../translator", editable = true }

[tool.poe.tasks.prod]
help = "run the server using uvicorn"
cmd  = "uvicorn main:app  --host 0.0.0.0 --port 9000"

[tool.poe.tasks.dev]
help = "run the server using uvicorn"
cmd  = "uvicorn main:app --reload --port 9000"

[tool.poe.tasks.docker-build]
help = "build the docker image"
cmd  = "docker build -f extension/backend/Dockerfile . -t tarehimself/manga-translator-extension"
cwd = "../../"
