[tool.poetry]
name = "manga-translator-training"
version = "0.1.0"
description = ""
authors = ["Oyintare Ebelo <75279482+TareHimself@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"

transformers = "^4.35.2"
timm = "^0.9.12"
tqdm = "^4.66.1"
numpy = "^1.26.2"
opencv-python = "^4.8.1.78"
vit-pytorch = "^1.6.5"
poethepoet = "^0.20.0"
html2image = "^2.0.4.3"
faker = "^27.0.0"

[tool.poe.tasks]
uninstall-torch = "python -m pip uninstall -y torch torchvision"
install-torch-cuda = "python -m pip install torch==2.0.1 torchvision --index-url https://download.pytorch.org/whl/cu117"
build-ui = "npm install && npm run build"
run-server = "python server.py"
force-cuda = ["uninstall-torch","install-torch-cuda"]



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
